Actual button hover fix, changed copyright spacing

--- a/assets/css/1-base/_blog-nav.sass
+++ b/assets/css/1-base/_blog-nav.sass
@@ -31,12 +31,12 @@
         
         &:hover
             border: none
-            box-shadow: 0px 5px 9px 0px rgba(black, 0.5)
+            box-shadow: 0px 7px 9px 0px rgba(black, 0.5)
     
     .copyright-wrap
         display: flex
         flex-direction: column
-        margin: 0 20px 20px
+        margin: 0 20px 10px
         flex-grow: 1
         align-self: flex-end
         
