--- a/assets/css/1-base/_home-nav.sass
+++ b/assets/css/1-base/_home-nav.sass
@@ -21,12 +21,12 @@
         padding: 2px 0px
         width: 226px
         height: auto
-        transition: all 100ms ease-in-out
+        transition: all 150ms ease-in-out
 
         &:hover
             color: darken(white, 15%)
             background: $darker-gray
-            box-shadow: 0px 5px 9px 0px rgba(black, 0.1)
+            box-shadow: 0px 7px 9px 0px rgba(black, 0.3)
 
         &:last-child
             margin-right: 0
