--- a/assets/css/2-sections/_home-contact.sass
+++ b/assets/css/2-sections/_home-contact.sass
@@ -54,7 +54,7 @@
                     
             
             &:hover
-                box-shadow: 0px 5px 9px 0px rgba(black, 0.5)
+                box-shadow: 0px 7px 9px 0px rgba(black, 0.5)
             
             .fa-github
                 margin-left: -15px
