--- a/assets/css/2-sections/_home-footer.sass
+++ b/assets/css/2-sections/_home-footer.sass
@@ -48,7 +48,7 @@
 
             &:hover
                 border: none
-                box-shadow: 0px 5px 9px 0px rgba(black, 0.5)
+                box-shadow: 0px 7px 9px 0px rgba(black, 0.5)
     
     .copyright
         color: white
